--- a/season_configs/spring_2017.yaml
+++ b/season_configs/spring_2017.yaml
@@ -157,7 +157,7 @@ info:
   anilist: 'https://anilist.co/anime/21452/SeikaisuruKado'
   mal: 'https://myanimelist.net/anime/32032/Seikaisuru_Kado'
 streams:
-  crunchyroll: ''
+  crunchyroll: 'http://www.crunchyroll.com/kado-the-right-answer'
 ---
 title: 'Shuumatsu Nani Shitemasu ka? Isogashii desu ka? Sukutte Moratte Ii desu ka?'
 type: tv  
